--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <script src="app.js"></script>
     <script src="js/productController.js"></script>
     <script src="js/productService.js"></script>
-
+    <script src="bower_components/ng-flow/dist/ng-flow-standalone.js"></script>
 
 
     <!-- add i18n script -->
